[gd_scene load_steps=25 format=2]

[ext_resource path="res://scripts/Minesweeper.gd" type="Script" id=1]
[ext_resource path="res://scripts/grid_logic.gd" type="Script" id=2]
[ext_resource path="res://assets/dark_tileset.tres" type="TileSet" id=3]
[ext_resource path="res://assets/russo_one_regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/menu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 96
outline_size = 5
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.607843, 0.607843, 0.607843, 0.6 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=6]
shadow_color = Color( 0.764706, 0.764706, 0.764706, 0.6 )
shadow_size = 5

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.313726, 0.313726, 0.313726, 1 )
border_blend = true
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 5.0
expand_margin_bottom = 5.0
shadow_color = Color( 0.713726, 0.713726, 0.713726, 0.6 )
shadow_size = 2

[sub_resource type="DynamicFont" id=17]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 17 )
MenuButton/colors/font_color = Color( 0.580392, 0.580392, 0.580392, 1 )
MenuButton/colors/font_color_focus = Color( 1, 1, 1, 1 )
MenuButton/colors/font_color_hover = Color( 1, 1, 1, 1 )
MenuButton/fonts/font = SubResource( 3 )
Panel/styles/panel = SubResource( 22 )
PopupDialog/styles/panel = SubResource( 6 )
PopupMenu/constants/vseparation = 10
PopupMenu/styles/panel = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
shadow_color = Color( 0.784314, 0.784314, 0.784314, 0.6 )
shadow_size = 5

[sub_resource type="DynamicFont" id=20]
size = 24
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=18]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=19]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="DynamicFont" id=14]
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=21]
size = 20
use_filter = true
font_data = ExtResource( 4 )

[node name="Minesweeper" type="Node2D"]
script = ExtResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
modulate = Color( 0.819608, 0.894118, 0.913725, 1 )
tile_set = ExtResource( 3 )
format = 1
script = ExtResource( 2 )

[node name="LabelContainer" type="Node2D" parent="."]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -73.0
margin_right = 20.0
margin_bottom = 73.0
grow_horizontal = 2
custom_colors/font_color = Color( 0.384314, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Control" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -450.0
margin_top = -450.0
margin_right = 450.0
margin_bottom = 450.0
mouse_filter = 2
theme = SubResource( 4 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="Panel" parent="HUD/Menu"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 40 )
custom_styles/panel = SubResource( 23 )

[node name="TimeLabel" type="Label" parent="HUD/Menu/ColorRect"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -35.0
margin_right = 35.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 20 )
text = "00:00"
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Menu"]
margin_left = 25.0
margin_right = 146.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileMenuButton" type="MenuButton" parent="HUD/Menu/HBoxContainer"]
margin_right = 42.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 18 )
text = "File"
items = [ "Start Game", null, 0, false, false, 0, 0, null, "", false, "Quit", null, 0, false, false, 1, 0, null, "", false ]

[node name="OptionsButton" type="MenuButton" parent="HUD/Menu/HBoxContainer"]
margin_left = 46.0
margin_right = 121.0
margin_bottom = 40.0
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 19 )
text = "Options"
items = [ "Grid Size", null, 0, false, true, 0, 0, null, "", true, "Beginner (9x9)", null, 0, false, false, 1, 0, null, "", false, "Intermediate (12x12)", null, 0, false, false, 2, 0, null, "", false, "Expert (15x15)", null, 0, false, false, 3, 0, null, "", false, "Custom", null, 0, false, false, 4, 0, null, "", false, "", null, 0, false, true, -1, 0, null, "", true, "Tile color", null, 0, false, false, 5, 0, null, "", false, "Show best times", null, 0, false, false, 6, 0, null, "", false ]

[node name="CustomGridSize" type="Popup" parent="HUD/Menu"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
rect_min_size = Vector2( 300, 300 )
popup_exclusive = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/Menu/CustomGridSize"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -300.0
margin_bottom = -300.0
rect_min_size = Vector2( 300, 300 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/Menu/CustomGridSize/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer"]
margin_left = 5.0
margin_top = 43.0
margin_right = 295.0
margin_bottom = 212.0
size_flags_vertical = 4
custom_constants/separation = 50

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 60.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_right = 290.0
margin_bottom = 20.0
size_flags_vertical = 3
text = "Select grid size"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 290.0
margin_bottom = 60.0
size_flags_vertical = 6
custom_constants/separation = 15
alignment = 1

[node name="X" type="SpinBox" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 137.0
margin_bottom = 30.0
min_value = 5.0
max_value = 25.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Y" type="SpinBox" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 152.0
margin_right = 238.0
margin_bottom = 30.0
min_value = 5.0
max_value = 25.0
value = 5.0

[node name="VBoxContainer2" type="VBoxContainer" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer"]
margin_top = 110.0
margin_right = 290.0
margin_bottom = 169.0
custom_constants/separation = 9

[node name="Label2" type="Label" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_right = 290.0
margin_bottom = 20.0
text = "Number of mines"
align = 1
valign = 1

[node name="MaxMines" type="SpinBox" parent="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer2"]
margin_left = 102.0
margin_top = 29.0
margin_right = 188.0
margin_bottom = 59.0
size_flags_horizontal = 4

[node name="Button" type="Button" parent="HUD/Menu/CustomGridSize/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -15.0
margin_top = -41.0
margin_right = 20.0
margin_bottom = -9.0
mouse_default_cursor_shape = 2
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="Popup" parent="HUD/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -64.0
margin_right = 180.0
margin_bottom = 64.0
rect_min_size = Vector2( 360, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/Menu/ColorPicker"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 360, 128 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/Menu/ColorPicker/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 5
custom_constants/margin_top = 25
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorSelect" type="GridContainer" parent="HUD/Menu/ColorPicker/Panel/MarginContainer"]
margin_left = 38.0
margin_top = 40.0
margin_right = 322.0
margin_bottom = 108.0
size_flags_horizontal = 6
size_flags_vertical = 6
columns = 8

[node name="ColorRect" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.909804, 0.882353, 0.819608, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.709804, 0.764706, 0.780392, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.423529, 0.466667, 0.529412, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect3"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect4" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.239216, 0.223529, 0.270588, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect4"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect5" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.760784, 0.85098, 0.407843, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect5"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect6" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 180.0
margin_right = 212.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.32549, 0.878431, 0.815686, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect6"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect7" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 216.0
margin_right = 248.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.286275, 0.588235, 0.819608, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect7"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect8" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 252.0
margin_right = 284.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.180392, 0.34902, 0.560784, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect8"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect9" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
color = Color( 1, 0.737255, 0.211765, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect9"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect10" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.0117647, 0.501961, 0.443137, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect10"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect11" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.670588, 0.466667, 0.454902, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect11"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect12" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.360784, 0.0509804, 0.2, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect12"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect13" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 144.0
margin_top = 36.0
margin_right = 176.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.901961, 0.25098, 0.501961, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect13"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect14" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 180.0
margin_top = 36.0
margin_right = 212.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.54902, 0.113725, 0.34902, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect14"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect15" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 216.0
margin_top = 36.0
margin_right = 248.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.980392, 0.435294, 0.352941, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect15"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect16" type="ColorRect" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect"]
margin_left = 252.0
margin_top = 36.0
margin_right = 284.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
color = Color( 0.709804, 0.129412, 0.215686, 1 )

[node name="Button" type="Button" parent="HUD/Menu/ColorPicker/Panel/MarginContainer/ColorSelect/ColorRect16"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 11 )
custom_styles/disabled = SubResource( 12 )
custom_styles/normal = SubResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Menu/ColorPicker/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -65.0
margin_right = 65.0
margin_bottom = 41.0
custom_fonts/font = SubResource( 14 )
text = "Select tile color"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlagLabel" type="Label" parent="HUD/Menu"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -40.0
margin_right = -10.0
margin_bottom = 14.0
grow_horizontal = 0
rect_min_size = Vector2( 0, 40 )
custom_fonts/font = SubResource( 16 )
valign = 1

[node name="BestTimes" type="Popup" parent="HUD/Menu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -112.5
margin_right = 125.0
margin_bottom = 112.5
rect_min_size = Vector2( 250, 225 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="HUD/Menu/BestTimes"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -100.0
rect_min_size = Vector2( 250, 225 )
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD/Menu/BestTimes/Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -55.5
margin_right = 55.5
margin_bottom = 35.0
custom_fonts/font = SubResource( 21 )
text = "Best times"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="HUD/Menu/BestTimes/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 15
custom_constants/margin_top = 60
custom_constants/margin_left = 15
custom_constants/margin_bottom = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="HUD/Menu/BestTimes/Panel/MarginContainer"]
margin_left = 15.0
margin_top = 60.0
margin_right = 235.0
margin_bottom = 210.0
mouse_filter = 2
custom_constants/vseparation = 20
columns = 2

[node name="BeginnerLabel" type="Label" parent="HUD/Menu/BestTimes/Panel/MarginContainer/GridContainer"]
margin_right = 108.0
margin_bottom = 20.0
text = "Beginner"

[node name="BeginnerTimeLabel" type="Label" parent="HUD/Menu/BestTimes/Panel/MarginContainer/GridContainer"]
margin_left = 220.0
margin_right = 220.0
margin_bottom = 20.0
size_flags_horizontal = 10

[node name="IntermediateLabel" type="Label" parent="HUD/Menu/BestTimes/Panel/MarginContainer/GridContainer"]
margin_top = 40.0
margin_right = 108.0
margin_bottom = 60.0
text = "Intermediate"

[node name="IntermediateTimeLabel" type="Label" parent="HUD/Menu/BestTimes/Panel/MarginContainer/GridContainer"]
margin_left = 220.0
margin_top = 40.0
margin_right = 220.0
margin_bottom = 60.0
size_flags_horizontal = 10

[node name="ExpertLabel" type="Label" parent="HUD/Menu/BestTimes/Panel/MarginContainer/GridContainer"]
margin_top = 80.0
margin_right = 108.0
margin_bottom = 100.0
text = "Expert"

[node name="ExpertTimeLabel" type="Label" parent="HUD/Menu/BestTimes/Panel/MarginContainer/GridContainer"]
margin_left = 220.0
margin_top = 80.0
margin_right = 220.0
margin_bottom = 100.0
size_flags_horizontal = 10

[node name="Button" type="Button" parent="HUD/Menu/BestTimes/Panel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -35.0
margin_right = 18.0
margin_bottom = -9.0
text = "OK"

[node name="BackGround" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="BackGround"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0.0392157, 0.0588235, 0.0313726, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="flag_placed_removed" from="TileMap" to="." method="_on_TileMap_flag_placed_removed"]
[connection signal="game_over" from="TileMap" to="." method="_on_TileMap_game_over"]
[connection signal="game_won" from="TileMap" to="." method="_on_TileMap_game_won"]
[connection signal="place_label" from="TileMap" to="." method="_on_TileMap_place_label"]
[connection signal="time_stopped" from="HUD/Menu" to="." method="_on_Menu_time_stopped"]
[connection signal="about_to_show" from="HUD/Menu/CustomGridSize" to="." method="_on_CustomGridSize_about_to_show"]
[connection signal="value_changed" from="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/X" to="." method="_on_X_value_changed"]
[connection signal="value_changed" from="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer/HBoxContainer/Y" to="." method="_on_Y_value_changed"]
[connection signal="value_changed" from="HUD/Menu/CustomGridSize/Panel/MarginContainer/VBoxContainer/VBoxContainer2/MaxMines" to="." method="_on_MaxMines_value_changed"]
[connection signal="pressed" from="HUD/Menu/CustomGridSize/Panel/Button" to="." method="_on_Button_pressed"]
[connection signal="about_to_show" from="HUD/Menu/BestTimes" to="." method="_on_BestTimes_about_to_show"]
[connection signal="pressed" from="HUD/Menu/BestTimes/Panel/Button" to="." method="_on_Hall_of_fame_Button_pressed"]
